--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.17.2",
     "fullcalendar": "^6.1.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
