--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
